--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ body {
   border: none;
 }
 #submission-answers:hover, #submission-answers:active {
-  color: #d5d5d5;
+  background-color: rgb(0, 0, 235);
 }
 
 .clicked-bundle {
@@ -352,7 +352,6 @@ body {
 .display-pct-placeholder .display-pct {
   width: 100%;
   text-align: center;
-  border-top: 1px solid #003587;
   font-size: 6rem;
   padding-top: 20px;
   font-weight: 600;
@@ -399,7 +398,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 3;
 }
 .logo-container a {
   width: 100%;
@@ -512,7 +511,7 @@ body {
   width: 100%;
 }
 
-.results-bubble:nth-child(92) {
+.results-bubble:nth-child(93) {
   margin-bottom: 60px;
 }
 
@@ -551,7 +550,7 @@ body {
     margin-right: 10px;
   }
 
-  .check-removable {
+  #check-removable {
     display: flex !important;
     flex-direction: column !important;
     align-items: center !important;
@@ -614,6 +613,414 @@ body {
     white-space: nowrap;
     font-size: 5rem !important;
   }
+
+  .degrade-content {
+    mask-image: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,0)) !important;
+    mask-size: 100% 75% !important;
+    -webkit-mask-image: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,0)) !important;
+    -webkit-mask-size: 100% 75% !important;
+  }
+
+  .noanswer-bundle {
+    margin-right: 2px !important;
+  }
+
+  .heading-expanded, .heading-rescind {
+    height: 170px !important;
+  }
+
+  .flex-placeholder-main {
+    display: block !important;
+  }
+
+  .display-pct {
+    border-top: 1px solid #003587 !important;
+  }
+
+  .comeback-btn {
+    top: 80px !important;
+    left: 20px !important;
+  }
+
+  .forward-btn {
+    top: 80px !important;
+    right: 20px !important;
+  }
+
+  .download-report-top {
+    top: 85px !important;
+    right: 20px !important;
+  }
+
+  .forward-check-again {
+    top: 85px !important;
+    left: 20px !important;
+  }
+
+  .dash-subject-sub, .dash-area-sub {
+    padding-left: 20px !important;
+  }
+
+  .graph-bubble {
+    margin-left: 1% !important;
+    margin-right: 1% !important;
+  }
+
+  .parallel-bubble {
+    width: 95% !important;
+    font-size: 1.5rem !important;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .parallel-question {
+    width: 50% !important;
+  }
+}
+
+.hidden-content, .hidden-content-onconfer {
+  display: none;
+}
+
+.degrade-content {
+  color: white;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+  mask-image: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,0));
+  mask-size: 100% 120%;
+  -webkit-mask-image: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,0));
+  -webkit-mask-size: 100% 50%;
+}
+
+.see-more-unleash {
+  position: absolute;
+  top: 91.5%;
+  left: 50%;
+  z-index: 2;
+  transform: translateX(-50%);
+  color: #003587;
+  background-color: transparent;
+  border: none;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+#chevron-down {
+  transform: rotate(90deg);
+  margin: 0px;
+  margin-left: -5px;
+  height: 40px;
+  width: auto;
+  fill: #003587;
+}
+
+.heading-expanded, .heading-rescind {
+  width: 100%;
+  height: 170px;
+  background-color: white;
+  padding: 20px;
+}
+
+.comeback-btn {
+  left: 40px;
+}
+
+.comeback-btn, .forward-btn {
+  position: absolute;
+  padding: 10px;
+  border-radius: 999px;
+  border: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  top: 100px;
+  background-color: white;
+}
+
+.forward-btn {
+  right: 40px;
+}
+
+#chevron-forward {
+  fill: #003587;
+  height: 40px;
+  width: auto;
+  transform: rotate(180deg);
+}
+
+.download-report-top {
+  right: 40px;
+}
+
+.forward-check-again {
+  left: 40px;
+}
+
+.download-report-top, .forward-check-again {
+  position: absolute;
+  display: flex;
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  top: 100px;
+  background-color: white;
+}
+
+.download-report-top p, .forward-check-again p{
+  color: #003587;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin: 0px;
+  margin-right: 5px;
+}
+
+#download-icon, #confer-icon {
+  fill: #003587;
+  height: 30px;
+  width: auto;
+}
+
+#chevron-back {
+  fill: #003587;
+  height: 40px;
+  width: auto;
+}
+
+.comeback-btn:hover, .comeback-btn:active, .download-report-top:hover, .download-report-top:active, .forward-btn:hover, .forward-btn:active, .forward-check-again:hover, .forward-check-again:active {
+  background-color: ghostwhite;
+}
+
+.flex-placeholder-main {
+  display: flex;
+}
+
+.dashboard-display {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.dashboard-heading {
+  display: flex;
+  border-top: 2px solid #003587;
+  width: 90%;
+  padding: 20px 0px 0px 20px;
+  font-size: 3rem;
+  font-weight: 600;
+  color: #003587;
+}
+
+.subject-bubbles {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px 7px;
+  color: #003587;
+  background-color: #eeeeee;
+  border-radius: 10px;
+  width: 360px;
+  margin: 10px 20px;
+}
+
+.subject-display {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 0px 20px 5px;
+  width: 100%;
+}
+
+.subject-answers {
+  font-size: 3.5rem;
+  display: flex;
+  font-weight: 600;
+  padding-left: 10px;
+}
+
+.para-range {
+  margin-left: 5px;
+  font-size: 1.8rem;
+  height: auto;
+  margin-top: auto;
+  font-weight: 400;
+}
+
+.subject-pcts {
+  font-size: 3.5rem;
+  font-weight: 600;
+}
+
+.subject-subtitle {
+  font-size: 2rem;
+  padding: 0px 5px 0px;
+}
+
+.bubble-wrapper-container {
+  display: flex;  
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.dash-subject-sub, .dash-area-sub {
+  font-size: 1.9rem;
+  font-weight: 300;
+  width: 90%;
+  padding: 10px 0px 10px 30px;
+  color: blue;
+}
+
+.new-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: blue;
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-bottom: 0px;
+}
+
+.graph-location {
+  padding: 20px 12px;
+  margin: 10px 10px 10px;
+  width: 90%;
+  height: 400px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+}
+
+.graph-display {
+  background-color: #eeeeee;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  height: 400px;
+  width: auto;
+  padding: 30px;
+  padding-bottom: 20px;
+}
+
+.graph-bubble {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  height: 95%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.graph-bar {
+  background-color: #003587;
+  width: 27px;
+  padding: 10px;
+  margin: 5px;
+  margin-top: auto;
+}
+
+.graph-legend {
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+
+.indicator-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 5px;
+  height: 100%;
+  margin-right: 10px;
+}
+
+.indicator-numbers {
+  font-size: 0.5;
+  color: black;
+}
+
+.bar-indicator {
+  height: 40%;
+  padding: 2px;
+  background-color: #989898;
+  width: 1px;
+}
+
+.hidden-content-forward {
+  display: none !important;
+}
+
+.hidden-content-important {
+  display: none !important;
+}
+
+.parallel-heading {
+  width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #003587;
+}
+
+#parallel-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 100%;
+}
+
+#parallel-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.parallel-bubble {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  padding: 20px;
+  background-color: #eeeeee;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  justify-content: space-between;
+}
+.parallel-bubble .parallel-question {
+  width: 30%;
+  font-size: 1.8rem;
+  font-weight: 200;
+  color: #000099;
+}
+
+.parallel-answer {
+  width: 100px !important;
+  font-weight: 600 !important;
+  color: #003587 !important;
 }
 
 /*# sourceMappingURL=styles.css.map */
