--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,13 @@
   font-weight: 400;
   font-display: swap;
 }
+
+@import url('http://fonts.cdnfonts.com/css/sf-pro-display');
+
 html, body {
   margin: 0px;
   padding: 0px;
-  font-family: "SFProDisplay", "Inter", Helvetica, sans-serif;
+  font-family: "SFProDisplay", "SF Pro Display", "Inter", Helvetica, sans-serif;
 }
 
 body {
